--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <html>
  <head>
  <meta charset="utf-8">
- <title>Lew's Blog</title>
+ <title>痴糖</title>
      <style media="screen">
          * {
                  margin: 0;
@@ -13,8 +13,7 @@
  </head>
  <body>
  </body>
-     <script type="text/javascript">
- 				//将这个地址修改成需要的博客地址
+     <script>
          window.location.href = "https://www.bilibili.com/video/av80433022"; 
      </script>
  </html>
