--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  </head>
  <body>
  </body>
-     <script>
-         window.location.href = "https://www.bilibili.com/video/av80433022"; 
+     <script type="text/javascript">
+         window.location.href = "https://www.bilibili.com/video/av80433022";
      </script>
  </html>
