--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
- <html>
- <head>
- <meta charset="utf-8">
- <title>痴糖</title>
-     <style media="screen">
-         * {
-                 margin: 0;
-                 padding: 0;
-         }
-     </style>
- </head>
- <body>
- </body>
-     <script type="text/javascript">
-         window.location.href = "https://www.bilibili.com/video/av80433022";
-     </script>
- </html>
+<script type="text/javascript">window.location.href = "https://www.bilibili.com/video/av80433022";</script>
