--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href = "https://www.bilibili.com/video/av80433022";</script>
+<script>window.location.href = "https://www.bilibili.com/video/av80433022";</script>
