--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>window.location.href = "https://music.163.com/#/song?id=5221167";</script>
+<script>window.location.href = "http://ws.stream.qqmusic.qq.com/C400004WUkgS3Es0ss.m4a?guid=423780054&vkey=6B6CB5FEE0718D524384694F149A60E78AB59DEFDEEAD67C1CBD7C5EBA024F08E87C34198281F54A5FEFA1904E89A13FC26CB98A0C06F948&uin=&fromtag=120032";</script>
